--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
@@ -8,4 +8,3 @@ spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-
